--- a/Curso_Introductorio_Python_v1_2.ipynb
+++ b/Curso_Introductorio_Python_v1_2.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# *Curso Introductorio de Programación en Python* - Ver 1.2\n",
-    "## Ronald Delgado - Marzo, 2022\n"
+    "## Ronald Delgado - 2022\n"
    ]
   },
   {
